fixed logo alignment on mobile response

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -149,13 +149,9 @@ nav {
 
     header {
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: space-around;
         align-items: center;
         gap: 0;
-    }
-
-    .nav-logo {
-        margin-left: 8px;
     }
 
     .nav-burger {
