--- a/css/story.css
+++ b/css/story.css
@@ -12,12 +12,22 @@ section#our-story {
     position: relative;
     padding: 50px 50px 50px 50px;
     box-sizing: border-box;
+    
+}
 
+
+section#our-story::before {
+    content: '';
+    position: absolute;
+    inset: 0;
     background-image: url('../img/svg/coffee-cup.svg');
     background-repeat: no-repeat;
-    background-position-x: 90%;
-    background-position-y: 90%;
+    background-position: 90% 90%;
     background-size: 250px;
+    filter: brightness(0.5);
+    opacity: 1;
+    z-index: 0;
+    pointer-events: none;
 }
 
 
